--- a/index.html
+++ b/index.html
@@ -1,11 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+   <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Homework Week 2</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="weather-app">
+        <form id="search-form"> 
+        <div class="search-form">
+          <div class="row">
+            <div class="col-9">
+            <input
+              type="search"
+              class="form-control"
+              id="text-input"
+              placeholder="Enter City here..."
+              autofocus="on"
+              fdprocessedid="0687n9"
+            />
+          </div>
+          <div class="col-3">
+            <input
+              type="submit"
+              value="Search"
+              class="form-control btn btn-light shadow-sm"
+            />
+          </form>
+          </div>
+        </div>
+
+        <h3>
+          Summer
+          <span>
+            <img
+              src="images/sun.png"
+              alt="sunny-icon"
+              class="weather-icon"
+              width="30"
+            />
+          </span>
+        </h3>
+        <h1 id="current-city">Melbourne</h1>
+        <h2 id="current-temperature">12°</h2>
+        <span>
+          <img
+            src="images/raincloud.png"
+            alt="raincloud-icon"
+            class="main-icon"
+            width="120"
+          />
+        </span>
+        <div class="forecast">
+          <ul>
+            <li id="current-date">Sunday 22nd October</li>
+            <li id="current-time">11:51AM,</li>
+            <li>Cloudy</li>
+          </ul>
+        </div>
+        <span class="weatherData">
+          <ul>
+            <li>Rain: 97% ☔</li>
+            <li>Wind: 26km 🍃</li>
+            <li>Humidity: 91%</li>
+          </ul>
+        </span>
+        <div class="row row-cols-1 row-cols-md-5 g-4">
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Tomorrow</h5>
+                <h4 class="weather-icon">
+                  <span>
+                    <img
+                      src="images/rainy-day.png"
+                      alt="rainy-icon"
+                      class="weather-icon"
+                      width="30"
+                    />
+                  </span>
+                </h4>
+                <p class="card-text"><strong>17°</strong> 9°</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Tuesday</h5>
+                <h4 class="weather-icon">
+                  <span>
+                    <img
+                      src="images/cloudy.png"
+                      alt="cloudy"
+                      class="weather-icon"
+                      width="30"
+                    />
+                  </span>
+                </h4>
+                <p class="card-text"><strong>24°</strong> 8°</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Wednesday</h5>
+                <h4 class="weather-icon">
+                  <span>
+                    <img
+                      src="images/raincloud.png"
+                      alt="raincloud-icon"
+                      width="30"
+                    />
+                  </span>
+                </h4>
+                <p class="card-text"><strong>12°</strong> 6°</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Thursday</h5>
+                <h4 class="weather-icon">
+                  <span>
+                    <img
+                      src="images/cloudy.png"
+                      alt="cloudy-icon"
+                      class="weather-icon"
+                      width="30"
+                    />
+                  </span>
+                </h4>
+                <p class="card-text"><strong>13°</strong> 5°</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-90">
+              <div class="card-body">
+                <h5 class="card-title">Friday</h5>
+                <h4 class="weather-icon">
+                  <span>
+                    <img
+                      src="images/partcloud.png"
+                      alt="partcloud-icon"
+                      class="weather-icon"
+                      width="30"
+                    />
+                  </span>
+                </h4>
+                <p class="card-text"><strong>19°</strong> 6°</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br />
+   <script src="src/index.js"></script>
+  </body>
+  <footer>Coded by <span class="name">Amber</span>👩‍💻</footer>
 </html>
